[gd_scene load_steps=6 format=3 uid="uid://50tod2hsjvde"]

[ext_resource type="Texture2D" uid="uid://i31scrgufbm7" path="res://art/craftland/48x48/tree.png" id="1_hcpj2"]
[ext_resource type="Script" path="res://scripts/rts_resource.gd" id="2_ohfr4"]
[ext_resource type="Texture2D" uid="uid://xkaxfaolwau4" path="res://art/craftland/48x48/damaged-tree.png" id="3_v81b4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8o2w2"]
size = Vector2(64, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h42q0"]
size = Vector2(40.5, 64.5)

[node name="RTS_Resource" type="Node2D"]
script = ExtResource("2_ohfr4")
resource_type = 1

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(4, -64)
texture = ExtResource("1_hcpj2")
metadata/_edit_lock_ = true

[node name="DamagedSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(3, -9)
texture = ExtResource("3_v81b4")
metadata/_edit_lock_ = true

[node name="GatherPos" type="Node2D" parent="."]
position = Vector2(34, 0)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -59)
metadata/_edit_lock_ = true

[node name="DefaultCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8o2w2")
metadata/_edit_lock_ = true

[node name="DamagedCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 50.25)
shape = SubResource("RectangleShape2D_h42q0")
disabled = true
metadata/_edit_lock_ = true

[node name="DamagedTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
